cabal-version:   3.0
name:            ddsk
version:         0.0.1.0
license:         NONE
maintainer:      hd2g
build-type:      Simple
extra-doc-files: README.md

common warnings
  ghc-options: -Wall

executable ddsk
  import:           warnings
  main-is:          Main.hs
  build-depends:    base ^>=4.16.4.0
  hs-source-dirs:   app
  default-language: Haskell2010
